# helmholtz_os

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_TOMO.md  agentic_browser.py  dataset_generation.ipynb  deps.repos  docker-compose.yml  dois_for_p07.txt  frames_2025-04-12_21.21.42.gv  input_urls.txt  last_page1_final.html  nohup.out  open_access_scraper.py  pdf_to_markdown.py  pgvector_ingest.py  pick_test.py  qna_output_sample.txt  requirements.txt  setup.py.bak  summarize_markdown.py  test_mcp_meetings.py  ur_robot.urdf  web_scraper.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: django.yml  publish-computer-use-mcp.yml
backend/: .env.example  db.py  embedder.py  llama_client.py  main.py  mcp_meetings.py  requirements.txt
backend/migrations/: 001_init.sql
data/: example_paper.md  open_access_papers.csv  report.csv  sources.csv  summary.txt
data1/: years.txt
docker/: Dockerfile  compose.yml
docker/computer-use-mcp/: Dockerfile  entrypoint.sh
docs/: cua_mcp_setup.md  mcp_gemini_guide.md
frontend/: index.html  main.js
gemini_harvester/: README.md  gemini_harvester.py  gemini_prompts.yaml
gemini_harvester/.gemini/: settings.json
gemini_harvester/scripts/: resolve_cua_entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  visualize.rviz
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/cmake/: robotiq_2f_85_gripper_visualizationConfig-version.cmake  robotiq_2f_85_gripper_visualizationConfig.cmake
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/environment/: ament_prefix_path.dsv  path.dsv
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/launch/: test_2f_85_model.launch.py
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/meshes/collision/: robotiq_arg2f_85_base_link.stl  robotiq_arg2f_85_inner_finger.dae  robotiq_arg2f_85_inner_knuckle.dae  robotiq_arg2f_85_outer_finger.dae  robotiq_arg2f_85_outer_knuckle.dae  robotiq_arg2f_base_link.stl
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/meshes/visual/: robotiq_arg2f_85_base_link.dae  robotiq_arg2f_85_inner_finger.dae  robotiq_arg2f_85_inner_knuckle.dae  robotiq_arg2f_85_outer_finger.dae  robotiq_arg2f_85_outer_knuckle.dae  robotiq_arg2f_85_pad.dae  robotiq_gripper_coupling.stl
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f.gazebo.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
log/: latest_build
mcp/: README.md  TEST_RESULTS.md  package-lock.json  package.json  server.js  server.test.js
mcp_meetings/: .gitignore  QUICKSTART.md  README.md  __init__.py  __main__.py  calendar_client.py  config.py  examples.py  mcp_client_config.example.json  participant_profiler.py  requirements.txt  server.py
moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf  ur.urdf.xacro
moveit_config/config/robotiq_2f_85_gripper_visualization/: CMakeLists.txt
moveit_config/launch/: load_ros2_controllers.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
moveit_config_backuo/: .setup_assistant  CMakeLists.txt
moveit_config_backuo/config/: joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
moveit_config_backuo/launch/: demo.launch.py
movit_config/: .setup_assistant
movit_config/config/: initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  sensors_3d.yaml  ur.srdf  ur.urdf
movit_config/launch/: rsp.launch.py  warehouse_db.launch.py
robotiq_2f_85_gripper_visualization/: CMakeLists.txt
robotiq_2f_85_gripper_visualization/launch/: test_2f_85_model.launch.py
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f.gazebo.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
ros/: Dockerfile  compose.yaml  docker-compose.yml
ros2_ws/: README.md
ros2_ws/src/minimal_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/minimal_sim/launch/: sim_launch.py
ros2_ws/src/minimal_sim/minimal_sim/: sim_loop.py
src/ur5_pick_place_demo/: package.xml  setup.cfg  setup.py
src/ur5_pick_place_demo/scripts/: robot.sh
src/ur5_pick_place_demo/ur5_pick_place_demo/: __init__.py  pick_place_demo.py
tests/: sections.py  test_agentic_browser.py  test_gemini_harvester.py  test_mcp_meetings.py  test_open_access_scraper.py  test_pdf_to_markdown.py  test_web_scraper.py
tests/data/: sample_meetings.ics
ur3_pick_place_docker/: README.md  docker-compose.yml
ur3_pick_place_docker/docker/: Dockerfile
ur3_pick_place_docker/scripts/: bootstrap_ws.sh  capture_sim_screenshots.sh  entrypoint.sh  run_ur3_pick_place.sh
ur3_pick_place_docker/ws/: pick_place_moveit_action.py  run_ur3_three_terminals.sh
ur3_test/: README.md  docker-compose.yml
ur3_test/docker/: Dockerfile
ur_description/: CMakeLists.txt  gazebo_sim_ros2_control.urdf.xacro
ur_description/urdf/: ur.urdf  (+4 more)
ur_gazebo/: CMakeLists.txt  package.xml
ur_interfaces/: CMakeLists.txt  package.xml
ur_moveit_demos/: CMakeLists.txt
ur_mtc_demos/: CMakeLists.txt
ur_mtc_pick_place_demo/: CMakeLists.txt  README.md  package.xml
ur_system_tests/: CMakeLists.txt  README.md
ur_system_tests/scripts/: arm_gripper_loop_controller.py
ur_system_tests/scripts/install/: local_setup.sh  setup.sh
ur_system_tests/scripts/log/: latest_build
ur_system_tests/src/: test_send_joint_space_goal.cpp
(+994 files in other folders)
