<?xml version="1.0"?>
<package format="3">
  <name>ur5_pick_place_demo</name>
  <version>0.0.1</version>
  <description>UR5e Pick and Place Demo for ROS 2 Jazzy with Gazebo Sim</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>action_msgs</depend>
  <depend>shape_msgs</depend>

  <!-- Robot description and simulation -->
  <depend>ur_description</depend>
  <depend>ur_simulation_gz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <!-- Controllers -->
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>

  <!-- Gazebo Sim integration -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <!-- MoveIt 2 -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_configs_utils</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>