<?xml version="1.0"?>
<package format="3">
  <name>minimal_sim</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 simulation loop publishing pose and status topics.</description>
  <maintainer email="dev@helmholtz.local">Helmholtz OS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
