<?xml version="1.0"?>
<package format="3">
  <name>robotiq_2f_85_gripper_visualization</name>
  <version>1.0.0</version>
  <description>Robotiq ARG 2-Finger 85mm model C3 description package</description>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="darshmenon02@gmail.com">Darsh  Menon</author>
  <maintainer email="darshmenon02@gmail.com">Darsh  Menon</maintainer>

  <!-- ROS 2 build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <!-- Export the package for ROS 2 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
