<?xml version="1.0"?>
<package format="3">
  <name>robotiq_2f_85_gripper_visualization</name>
  <version>1.0.0</version>
  <description>Robotiq ARG 2-Finger 85mm model C3 description package</description>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  
  <maintainer email="daniels.ordonez@gmail.com">Daniel Ordonez</maintainer>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <author email="daniels.ordonez@gmail.com">Daniel Ordonez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
